<resources>
    <string name="app_name">AndroidMaster</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Re-calcular</string>
    <string name="result">Tu resultado</string>

    <string name="error">Error</string>

    <string name="title_underweight">Bajo peso</string>
    <string name="description_underweight">Estás por debajo del peso óptimo para tu altura.</string>

    <string name="title_normal_weight">Peso normal</string>
    <string name="description_normal_weight">Estás en lo óptimo para tu altura.</string>

    <string name="title_overweight">Peso alto</string>
    <string name="description_overweight">Estás por encima del peso óptimo para tu altura.</string>

    <string name="title_obesity">Obesidad</string>
    <string name="description_obesity">Estás MUY por encima del peso óptimo para tu altura.</string>

    <!--TODOAPP-->
    <string name="todo_title">Bienvenido, j</string>
    <string name="todo_categories">Categorías:</string>
</resources>